# valkyrie-on-vscode

./: .editorconfig  .gitignore  .vscodeignore  Readme.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: rust.yml  vscode.yml
projects/wit-document/: Cargo.toml  index.html  readme.md
projects/wit-document/assets/: style.scss
projects/wit-document/src/: lib.rs  main.rs
projects/wit-document/src/helpers/: mod.rs
projects/wit-document/src/renderer/: mod.rs  render_functions.rs  render_interface.rs  render_types.rs  render_world.rs
projects/wit-document/src/resolver/: mod.rs
projects/wit-document/tests/: main.rs
src/: extension.ts
syntaxes/: language-configuration.json  valkyrie.tmLanguage.json  voc.tmLanguage.json  voml.tmLanguage.json  von.tmLanguage.json
